# haskell-estgi-debugger

./: .gitignore  Dockerfile  README.md  cabal.project  stack.yaml
dap/: .ghci  LICENSE  README.md  cabal.project  dap.cabal  default.nix  shell.nix  stack.yaml
dap-estgi-server/: CHANGELOG.md  dap-estgi-server.cabal
dap-estgi-server/src/: Breakpoints.hs  CustomCommands.hs  CustomDapTypes.hs  DapBase.hs  Graph.hs  Main.hs  Region.hs  SharedFolder.hs  SourceCode.hs  SourceLocation.hs
dap-estgi-server/src/GraphProtocol/: Commands.hs  Server.hs
dap-estgi-server/src/Inspect/: Stack.hs  Value.hs
dap-estgi-server/src/Inspect/Value/: Atom.hs  HeapObject.hs  StackContinuation.hs
dap-estgi-vscode-extension/: CHANGELOG.md  README.md
dap-estgi-vscode-extension/src/: extension.ts
dap-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
dap-extension/src/: extension.ts
dap/cbits/: main.c
dap/exe/: Main.hs
dap/hello/: foo  hello.cabal  stack.yaml
dap/hello/src/: hello.hs
dap/nix/: default.nix  nixpkgs.json
dap/src/: DAP.hs
dap/src/DAP/: Adaptor.hs  Event.hs  Internal.hs  Response.hs  Server.hs  Types.hs  Utils.hs
dap/test/: Main.hs
docs-images/: dap-01-vscode-setup-5fps.avif  dap-02-run-dap-estgi-extension-5fps.avif  dap-03-start-dap-estgi-server-5fps.avif  dap-04-compile-debuggee-5fps.avif  dap-05-open-debuggee-in-vscode-5fps.avif
sample-program-to-debug/: hello.cabal  stack.yaml
