name:               dap
version:            0.1.0.0
description:        A library for the Debug Adaptor Protocol (DAP)
synopsis:           A debug adaptor protocol library
bug-reports:        https://github.com/dap/issues
license:            BSD3
license-file:       LICENSE
author:             David Johnson
maintainer:         djohnson.m@gmail.com
copyright:          (c) 2023 David Johnson
category:           Debuggers, Language
build-type:         Simple
tested-with:        GHC==9.2.4
cabal-version:      >= 1.10

extra-source-files:
  CHANGELOG.md

executable dap
  main-is:
    Main.hs
  ghc-options:
    -threaded
  build-depends:
      base < 5
    , dap
    , bytestring
    , external-stg-interpreter
    , lifted-base
    , network
    , unagi-chan
    , unordered-containers
    , aeson
    , text
    , time
    , mtl
  hs-source-dirs:
    exe
  default-language:
    Haskell2010

library
  exposed-modules:
    DAP
  other-modules:
    DAP.Adaptor
    DAP.Event
    DAP.Internal
    DAP.Response
    DAP.Server
    DAP.Types
    DAP.Utils
  build-depends:
      aeson
    , aeson-pretty
    , base < 5
    , bytestring
    , lifted-base
    , mtl
    , monad-control
    , network
    , network-simple
    , stm
    , text
    , time
    , transformers-base
    , unordered-containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010
