name:               dap
version:            0.1.0.0
description:        A library for the Debug Adaptor Protocol (DAP)
synopsis:           A debug adaptor protocol library
bug-reports:        https://github.com/dap/issues
license:            BSD3
license-file:       LICENSE
author:             David Johnson
maintainer:         djohnson.m@gmail.com
copyright:          (c) 2023 David Johnson
category:           Debuggers, Language
build-type:         Simple
tested-with:        GHC==9.2.4
cabal-version:      >= 1.10

extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    DAP
  other-modules:
    DAP.Adaptor
    DAP.Event
    DAP.Internal
    DAP.Response
    DAP.Server
    DAP.Types
    DAP.Utils
  build-depends:
      aeson
    , aeson-pretty
    , base < 5
    , containers
    , bytestring
    , lifted-base
    , mtl
    , monad-control
    , network
    , network-simple
    , stm
    , text
    , time
    , transformers-base
    , unordered-containers
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test, src
  main-is:
    Main.hs
  other-modules:
    DAP.Response
    DAP.Internal
    DAP.Server
    DAP.Adaptor
    DAP.Server
    DAP.Types
    DAP.Event
    DAP.Utils
  build-depends:
      aeson
    , aeson-pretty
    , async
    , base < 5
    , bytestring
    , containers
    , lifted-base
    , monad-control
    , hspec
    , mtl
    , network
    , network-simple
    , stm
    , string-conversions
    , text
    , time
    , transformers-base
    , unordered-containers
  default-language:
    Haskell2010
