-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello
version: 1.0.0.2
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: mailto:marlowsd@gmail.com
stability: stable
homepage: http://www.haskell.org/hello/
synopsis: Hello World, an example package
category: Console, Text
cabal-version: >= 1.8
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  ghc-options:
     -fplugin=WPC.Plugin
  build-depends:
      base >= 4.2 && < 5
    , wpc-plugin

  -- ghc-options:
  --   -fplugin-library=/nix/store/871x1xb4f2pxdx2py46q2qr52vzy2ykf-wpc-plugin-1.0.1/lib/ghc-9.6.1/lib/libwpc-plugin.so;wpc-plugin-unit;WPC.Plugin;[]
  --   -fplugin-trustworthy

  if flag(threaded)
     ghc-options: -threaded
